<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share" />

    <item
        android:iconTint="@color/blue"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        tools:targetApi="o" />

    <item
        android:checked="true"
        android:id="@+id/map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map" />


  <item
        android:id="@+id/aboutus"
        android:icon="@drawable/ic_call_black_24dp"
        android:title="@string/aboutus" />

</menu>
